[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/items/basicItem.gd" type="Script" id=2]
[ext_resource path="res://img/itemImage/default.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 17 )

[node name="BasicItem" type="Node2D"]
position = Vector2( -1.18921, 28.541 )
script = ExtResource( 2 )
itemSlotIconTexture = ExtResource( 3 )

[node name="ItemPickupArea" type="Area2D" parent="."]
monitoring = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupArea"]
visible = false
position = Vector2( 0.594604, -24.3788 )
shape = SubResource( 1 )

[node name="Facing" type="Position2D" parent="."]

[node name="Placed" type="Sprite" parent="."]

[node name="Held" type="Sprite" parent="."]
